--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,10 +15,5 @@ jobs:
       with:
         go-version: '1.16.3' # The Go version to download (if necessary) and use.
     - run: GO111MODULE=on go get github.com/mikefarah/yq/v4
-    - name: Use Node.js 14
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - run: yarn install
-    - run: yarn generate
+    - run: ./scripts/generate.sh
   
