--- a/.github/workflows/fetch_api_client.yaml
+++ b/.github/workflows/fetch_api_client.yaml
@@ -33,9 +33,10 @@ jobs:
             
             ## SDK update procedure
 
+            ## SDK update procedure
+
             1. Review changes on OpenAPI file and validate if they are correct
             2. Perform manual changes if needed or apply local patches for the OpenAPI files 
             3. Merge PR 
-            4. Regenerate API using `yarn generate` and verify if underlying clients and examples are functional
-            5. Create PR and merge changes to main
+            4. Merge automatically generated PR with source code when build passes
             6. Perform release on github with new changes
