--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -30,7 +30,7 @@ jobs:
           author: "app-services-ci <app-services-ci@users.noreply.github.com>"
           branch: chore/generate-api-clients
           branch-suffix: timestamp
-          reviewers: craicoverflow, wtrocki, CI_USER_TOKEN
+          reviewers: craicoverflow, wtrocki, secondsun
           delete-branch: suffix
           body: |
             _This pull request was auto-generated_
