--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,9 @@ jobs:
               distribution: 'adopt'
               java-version: '15'
               check-latest: true
+              server-id: ossrh
+              server-username: MAVEN_USERNAME
+              server-password: MAVEN_PASSWORD
       - id: install-secret-key
         name: Install gpg secret key
         run: |
