--- a/packages/registry-management-sdk/pom.xml
+++ b/packages/registry-management-sdk/pom.xml
@@ -5,6 +5,9 @@
     <artifactId>registry-management-sdk</artifactId>
     <packaging>jar</packaging>
     <name>registry-management-sdk</name>
+    <description>Red Hat Aplicaiton Services Java SDK</description>
+    <url>https://github.com/redhat-developer/app-services-sdk-java</url>
+
     <version>0.0.5</version>
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
@@ -12,11 +15,12 @@
         <url>https://github.com/openapitools/openapi-generator</url>
     </scm>
 
-   <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
+    <distributionManagement>
+        <repository>
+        <id>ossrh</id>
+        <name>Central Repository OSSRH</name>
+        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
 
