--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -25,3 +25,9 @@
 **/gradlew.bat
 **/settings.gradle
 **/.classpath
+
+## Temp workaround to make build pass
+**/**/AclPatternTypeFilter.java
+**/**/AclPermissionTypeFilter.java
+**/**/AclOperationFilter.java
+**/**/AclResourceTypeFilter.java
