test: creating verification tests project

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>packages/kafka-management-sdk</module>
         <module>packages/registry-management-sdk</module>
         <module>packages/kafka-instance-sdk</module>
+        <module>examples</module>
     </modules>
 
     <dependencyManagement>
