--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>kafka-management-sdk</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.redhat.cloud</groupId>
+            <artifactId>kafka-instance-sdk</artifactId>
+            <version>0.3.0</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
@@ -62,7 +69,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.26.0</version>
+                <version>0.37.0</version>
                 <executions>
                     <execution>
                         <id>start</id>
@@ -99,7 +106,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version> <!--$NO-MVN-MAN-VER$ -->
+                <version>2.22.2</version> 
                 <executions>
                     <execution>
                         <goals>
