--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -26,7 +26,11 @@
             <artifactId>kafka-management-sdk</artifactId>
             <version>1.1.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.redhat.cloud</groupId>
+            <artifactId>registry-management-sdk</artifactId>
+            <version>0.5.1</version>
+        </dependency>
         <dependency>
             <groupId>com.redhat.cloud</groupId>
             <artifactId>kafka-instance-sdk</artifactId>
