feat: adding connector to maven central deploy

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,6 +41,9 @@ jobs:
       - name: Version registry-management-sdk
         working-directory: ./packages/registry-management-sdk
         run : mvn versions:set -DnewVersion=$GITHUB_REF_SLUG                
+      - name: Version connector-management-sdk
+        working-directory: ./packages/connector-management-sdk
+        run : mvn versions:set -DnewVersion=$GITHUB_REF_SLUG                
       - name: Build kafka-management-sdk
         working-directory: ./packages/kafka-management-sdk
         run : mvn package -Prelease 
@@ -50,6 +53,9 @@ jobs:
       - name: Build registry-management-sdk
         working-directory: ./packages/registry-management-sdk
         run : mvn package -Prelease                
+      - name: Build connector-management-sdk
+        working-directory: ./packages/connector-management-sdk
+        run : mvn package -Prelease                        
       - name: Publish kafka-management-sdk
         working-directory: ./packages/kafka-management-sdk
         run: mvn --batch-mode -Prelease      -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}  deploy
@@ -68,6 +74,12 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      - name: Publish connector-management-sdk
+        working-directory: ./packages/connector-management-sdk
+        run: mvn --batch-mode -Prelease      -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} deploy
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}          
       - name: Install git-chglog
         uses: craicoverflow/install-git-chglog@v1
       - name: Generate changelog
