--- a/packages/registry-management-sdk/pom.xml
+++ b/packages/registry-management-sdk/pom.xml
@@ -7,8 +7,9 @@
     <name>registry-management-sdk</name>
     <description>Red Hat Aplicaiton Services Java SDK</description>
     <url>https://github.com/redhat-developer/app-services-sdk-java</url>
+    
+    <version>0.0.1-SNAPSHOT</version>
 
-    <version>0.0.6</version>
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
         <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
@@ -46,7 +47,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -112,7 +113,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>add_sources</id>
@@ -152,7 +153,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>3.3.0</version>
                 <configuration>
                     <doclint>none</doclint>
                     <source>1.8</source>
@@ -181,7 +182,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
+                <version>1.6.7</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -266,15 +267,15 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <swagger-annotations-version>1.6.4</swagger-annotations-version>
-        <resteasy-version>4.7.5.Final</resteasy-version>
-        <jackson-version>2.13.1</jackson-version>
-        <jackson-databind-version>2.13.1</jackson-databind-version>
+        <swagger-annotations-version>1.5.22</swagger-annotations-version>
+        <resteasy-version>4.5.11.Final</resteasy-version>
+        <jackson-version>2.10.5</jackson-version>
+        <jackson-databind-version>2.10.5.1</jackson-databind-version>
         <jackson-databind-nullable-version>0.2.1</jackson-databind-nullable-version>
         <javax-annotation-version>1.3.2</javax-annotation-version>
         <threetenbp-version>2.9.10</threetenbp-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
-        <junit-version>4.13.2</junit-version>
+        <junit-version>4.13</junit-version>
     </properties>
     <profiles>
         <profile>
