fix: always pull latest version of the mock

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -89,6 +89,7 @@
 
 
                 <configuration>
+                    <imagePullPolicy>Always</imagePullPolicy>
                     <images>
                         <image>
                             <name>quay.io/rhosak/api-mock</name>
