--- a/.github/workflows/fetch_api_client.yaml
+++ b/.github/workflows/fetch_api_client.yaml
@@ -25,7 +25,7 @@ jobs:
           author: "app-services-ci <app-services-ci@users.noreply.github.com>"
           branch: add-${{ github.event.client_payload.id }}-openapi
           branch-suffix: timestamp
-          reviewers: craicoverflow, wtrocki, secondsun
+          reviewers: wtrocki
           body: |
             _This pull request was auto-generated_
             
