--- a/.github/workflows/generate_errors.yaml
+++ b/.github/workflows/generate_errors.yaml
@@ -31,7 +31,7 @@ jobs:
           author: "app-services-ci <app-services-ci@users.noreply.github.com>"
           branch: chore/generate-sdks-errors
           branch-suffix: timestamp
-          reviewers: craicoverflow, wtrocki
+          reviewers: '@redhat-developer/app-services-sdk-maintainers'
           delete-branch: true
           body: |
             _This pull request was auto-generated_
