--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: SDK build
+name: SDK build and verification
 
 on:
   push:
@@ -7,13 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  sdkbuild:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - run: mkdir -p "$HOME/.local/bin"; echo "$HOME/.local/bin" >> $GITHUB_PATH
-    - run: wget https://github.com/mikefarah/yq/releases/download/v4.2.0/yq_linux_amd64 -O $HOME/.local/bin/yq && chmod +x $HOME/.local/bin/yq          
-    - run: ./scripts/generate.sh
-    - run: mvn clean package       
+    - run: wget https://github.com/mikefarah/yq/releases/download/v4.2.0/yq_linux_amd64 -O $HOME/.local/bin/yq && chmod +x $HOME/.local/bin/yq
+    - run: mvn clean package 
+    - name: Merge Changes if PR created by bot
+      if:  github.actor == 'app-services-ci'
+      run: gh pr merge --auto --delete-branch --squash "$PR_URL"
+      env:
+        PR_URL: ${{ github.event.pull_request.html_url }}
+        GITHUB_TOKEN: ${{ secrets.CI_USER_TOKEN }}       
 
   
