fix: update workflow

--- a/.github/workflows/api-update.yaml
+++ b/.github/workflows/api-update.yaml
@@ -1,7 +1,21 @@
+
+
 name: Update SDK
 on:
+  ## External event triggered by Repository
   repository_dispatch:
     types: [openapi-spec-change]
+  ## Manual request that can be used for testing and retriggering failed updates
+  workflow_dispatch:
+    inputs:
+      url: 
+        description: 'Type of SDK event to handle'     
+        required: true
+        type: choice
+        options:
+        - "https://raw.githubusercontent.com/bf2fc6cc711aee1a0c2a/kas-fleet-manager/main/openapi/kas-fleet-manager.yaml"
+        - "https://raw.githubusercontent.com/bf2fc6cc711aee1a0c2a/kas-fleet-manager/main/openapi/connector_mgmt.yaml"
+        - "https://raw.githubusercontent.com/bf2fc6cc711aee1a0c2a/srs-fleet-manager/main/core/src/main/resources/srs-fleet-manager.json"
 
 jobs:
   generate_client:
@@ -11,11 +25,15 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v2
-      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
       - name: Install jq
         run: sudo apt-get install jq
       - name: Fetch OpenAPI doc
+        if: github.event.inputs.url != ''
+        run: ./scripts/fetch_api.sh ${{ github.event.inputs.url }}
+      - name: Fetch OpenAPI doc
+        if: github.event.client_payload.download_url != ''
         run: ./scripts/fetch_api.sh ${{ github.event.client_payload.download_url }}
       - name: Generate API clients
         run: make generate
@@ -25,7 +43,7 @@ jobs:
         with:
             title: "fix(${{ github.event.client_payload.id }}): automated SDK update"
             token: "${{ secrets.CI_USER_TOKEN }}"
-            commit-message: "fix(${{ github.event.client_payload.id }): update ${{ github.event.client_payload.id }} SDK"
+            commit-message: "fix(${{ github.event.client_payload.id }}): update ${{ github.event.client_payload.id }} SDK"
             author: "app-services-ci <app-services-ci@users.noreply.github.com>"
             branch: chore/generate-api-clients
             branch-suffix: timestamp
