--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,8 +44,8 @@ jobs:
       - name: Version connector-management-sdk
         working-directory: ./packages/connector-management-sdk
         run : mvn versions:set -DnewVersion=$GITHUB_REF_SLUG       
-      - name: Version service-account-management-sdk
-        working-directory: ./packages/service-accounts-management-sdk
+      - name: Version service-accounts-sdk
+        working-directory: ./packages/service-accounts-sdk
         run : mvn versions:set -DnewVersion=$GITHUB_REF_SLUG   
       - name: Version smartevents
         working-directory: ./packages/smart-events-management-sdk
@@ -83,7 +83,7 @@ jobs:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}  
       - name: Publish service accounts
-        working-directory: ./packages/service-accounts-management-sdk
+        working-directory: ./packages/service-accounts-sdk
         run: mvn --batch-mode -Prelease      -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}  deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
