--- a/packages/kafka-instance-sdk/pom.xml
+++ b/packages/kafka-instance-sdk/pom.xml
@@ -163,6 +163,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                     <id>attach-sources</id>
@@ -275,7 +276,7 @@
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>3.0.1</version>
                         <configuration>
-                            <gpgArguments> 
+                            <gpgArguments>
                                 <arg>--pinentry-mode</arg>
                                 <arg>loopback</arg>
                             </gpgArguments>
