--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,8 +17,8 @@ jobs:
       - name: Use Java 15
         uses: actions/setup-java@v2
         with:
-              distribution: 'adopt'
-              java-version: '15'
+              distribution: 'temurin'
+              java-version: '11'
               check-latest: true
               server-id: ossrh
               server-username: MAVEN_USERNAME
